# alexstocks

./: .env.example  .gitignore  CRON_UPDATE_SUMMARY.md  Dockerfile  ECS_MIGRATION_SUMMARY.md  EMAIL_SETUP_README.md  IMPLEMENTATION_STATUS.md  LLM_SENTIMENT_SETUP.md  Makefile  README.md  STOCK_COLLECTION_15K_TICKERS.md  STOCK_COLLECTION_QUICKSTART.md  TICKER_EXPANSION_SUMMARY.md  TICKER_LINKING_IMPROVEMENTS.md  cron-ec2-production.txt  cron-hourly-setup.txt  cron-stock-prices-setup.txt  crontab.example  docker-compose.yml  env.example  explore_yfinance_fields.py  pyproject.toml  test_enum_serialization.py  test_expanded_fields.py  test_full_scraper.py  test_optimization.py  test_real_reddit_sentiment.py  test_sentiment_comparison.py
.claude/: settings.local.json
.cursor/rules/: linting-formatting.mdc  pipelines.mdc  specify-rules.mdc  tests.mdc
.github/workflows/: ci.yml  deploy-ecs-jobs.yml  staging.yml
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 269070216a3d_add_backfill_progress_table.py  4274ce6ee703_add_email_send_log_table.py  553177e8cc96_add_llm_sentiment_to_daily_ticker_.py  5a8dff29d8f7_add_engagement_score_to_article.py  7a6b96aac112_create_user_tables.py  7bbbee342bd_add_email_bounce_fields.py  9a2a65bbcc1c_add_daily_ticker_summary_table.py  9b4400615dfb_ensure_stock_price_history_unique_.py  a1b2c3d4e5f6_add_weekly_digest_send_record_table.py  c0d178e0fe0b_compact_top_articles_payloads.py  cc54601192d9_add_order_to_user_ticker_follows.py
analytics/: README.md  etf_article_counts.sql  tickers_per_day_with_more_than_10_articles.sql
app/: __init__.py  config.py  main.py
app/artifacts/: manifest.json  robots.txt
app/collectors/: stock_price_collector.py
app/db/: models.py  session.py
app/jobs/: analyze_sentiment.py  collect_real_prices.py  collect_stock_prices.py  collect_top50_stock_prices.py  override_sentiment_dual_model.py  override_sentiment_with_llm.py  scrape_and_analyze.py  scrape_and_analyze_monthly.py  scrape_monthly_discussions.py
app/models/: __init__.py  dto.py
app/repos/: email_send_log_repo.py  summary_repo.py  user_repo.py  weekly_digest_repo.py
app/scripts/: add_matched_terms_column.py  add_reddit_columns.py  add_reddit_thread_table.py  add_scraping_status_table.py  add_sentiment_column.py  add_sentiment_to_existing_articles.py  add_stock_price_tables.py  add_users_table.py  backfill_user_notification_channels.py  check_rate_limit.py  clean_all_aliases.py  clean_problematic_aliases.py  clean_problematic_tickers.py  (+32 more)
data/: tickers_core_backup.csv  tickers_expanded_20250925_205046.csv
docs/: API.md  AUTHENTICATION.md  AUTH_QUICKSTART.md  AVOIDING_RATE_LIMITS.md  COMPLETE_MIGRATION_PLAN.md  CRON_JOBS_SUMMARY.md  DECOUPLED_JOBS.md  EC2_CRON_SETUP.md  EC2_MIGRATION_QUICKSTART.md  ECS_MIGRATION_GUIDE.md  ECS_MIGRATION_SUMMARY.md  GDELT_REMOVAL_SUMMARY.md  GOOGLE_ANALYTICS_USER_TRACKING.md  HISTORICAL_BACKFILL_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LAMBDA_OPPORTUNITIES.md  MIGRATION_CHECKLIST.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  PROXY_SETUP.md  QUICK_START_CHECKLIST.md  REDDIT_SCRAPER.md  REDDIT_SCRAPER_SUMMARY.md  REDDIT_SETUP.md  SLACK_SETUP.md  STAGING_BASELINE.md  STAGING_RUNBOOK.md  STOCK_DATA_COLLECTION.md  STOCK_PRICE_CRON.md  STOCK_PRICE_IMPLEMENTATION_SUMMARY.md  TESTING.md  TESTING_AUTH_LOCALLY.md  TESTING_WORKFLOW_FIX.md  TICKER_LINKING_IMPROVEMENTS.md  TIMEZONE_DETECTION.md  U1_ALIGNMENT_FIX.md  U1_IMPLEMENTATION_SUMMARY.md  USER_MIGRATION_GUIDE.md  ci-cd-setup.md  (+7 more)
infrastructure/: README.md
ingest/: __init__.py  gdelt.py  linker.py  parser.py  reddit.py  reddit_discussion_scraper.py  reddit_full_scraper.py  reddit_incremental.py  reddit_incremental_scraper.py  reddit_parser.py  reddit_robust_scraper.py  reddit_scraper.py  reddit_scraper_cli.py
jobs/: Dockerfile  README.md  pyproject.toml
jobs/config/: README.md  reddit_scraper_config.yaml
jobs/ingest/: linker.py  reddit_config.py  reddit_discussion_scraper.py  reddit_scraper.py  reddit_scraper_cli.py
jobs/jobs/: analyze_sentiment.py  collect_historical_prices_backfill.py  collect_real_prices.py  collect_stock_prices.py  daily_historical_append.py  daily_status.py  daily_ticker_summary.py  fill_price_gaps.py  hourly_historical_append.py  override_sentiment_dual_model.py  override_sentiment_with_llm.py  scrape_and_analyze.py  scrape_monthly_discussions.py  send_daily_emails.py  send_weekly_digest.py  slack_wrapper.py  stock_price_collector.py  test_historical_backfill.py  ticker_utils.py
notebooks/: daily_summary_playground.ipynb  market_pulse_testing.ipynb  sarcasm_sentiment_playground.ipynb  test_linking_module.ipynb  test_stock_price_collector.ipynb  test_stock_prices.ipynb  test_stock_prices_cached.ipynb  yahoo_finance_testing.ipynb
scripts/: cleanup-old-cron.sh  ec2-setup.sh  nginx-setup.sh  setup-aws-secrets.sh  setup-cron-15min.sh  setup-ec2-cron.sh  setup-github-auth.sh  setup-stock-price-cron.sh  staging-start.sh  staging-stop.sh  staging.conf.example  stock-price-collector.service  stock-price-collector.timer  test_workflow_task_update.sh  validate-migration-setup.sh
tests/: __init__.py  conftest.py  test_auth_integration.py  test_auth_service.py  test_expanded_fields.py  test_gdelt_ingest.py  test_home_template_sentiment.py  test_integration.py  test_linker_common_words.py  test_main.py  test_mentions_hourly.py  test_merge_ticker_aliases.py  test_optimization.py  test_param_caps.py  test_performance.py  test_rate_limit.py  test_real_world_integration.py  test_reddit_ingest.py  test_reddit_scraper_new.py  test_reddit_scraping.py  test_sentiment.py  test_sentiment_analysis.py  test_sentiment_lean.py  test_stock_api.py  test_stock_collector.py  test_stock_data.py  test_stock_price_cache.py  test_stock_price_collector.py  test_stock_price_integration.py  test_stock_price_service.py  test_stock_service_history.py  test_ticker_linking.py  test_ticker_page_filters.py  test_user_deletion_api.py  test_user_deletion_polish.py  test_user_deletion_service.py  test_users_api.py  test_watchlist.py
(+114 files in other folders)
