[project]
name = "market-pulse"
version = "0.1.0"
description = "Market Pulse - Lean MVP for market news analytics"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "vaderSentiment>=3.3.2",
    "pyyaml>=6.0.0",
    "python-dateutil>=2.8.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "jupyter>=1.1.1",
    "ipykernel>=6.30.1",
    "pandas>=2.3.2",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "praw>=7.7.0",
    "prawcore>=2.4.0",
    "python-dotenv>=1.0.0",
    "transformers>=4.30.0,<4.40.0",
    "torch>=2.2.0,<2.3.0",  # 2.2.2 is last version with Intel Mac support
    "numpy>=1.24.0,<2.0.0",
    "torchvision>=0.17.0,<0.18.0",  # Match torch version
    "yfinance>=0.2.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".venv",
    "jobs/.venv",
    "notebooks",
    "*.ipynb",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"jobs/jobs/stock_price_collector.py" = ["E402"]  # Load .env before imports
"explore_yfinance_fields.py" = ["E722"]  # Bare except is intentional
"test_*.py" = ["E722"]  # Test files may use bare except

[tool.black]
target-version = ['py311']
line-length = 88
exclude = '''
/(
    \.venv
  | jobs/\.venv
  | notebooks
  | .*\.ipynb
)/
'''

[tool.mypy]
files = ["app", "jobs/jobs", "tests"]  # <-- include jobs/jobs but not jobs/ingest
exclude = "(^|/)ingest(/|$)"      # <-- keep mypy from walking ingest trees
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.uv]
# Support both local macOS (Intel/ARM) and EC2 Linux environments
environments = [
    "sys_platform == 'darwin'",  # macOS (both Intel and ARM)
    "sys_platform == 'linux'",   # EC2 Linux
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.5",
    "black>=25.1.0",
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.13.0",
    "httpx>=0.25.0",
    "faker>=22.0.0",
    "freezegun>=1.4.0",
    "pre-commit>=3.5.0",
    "bandit>=1.7.0",
    "types-requests>=2.31.0",
    "types-beautifulsoup4>=4.12.0",
    "types-pyyaml>=6.0.0",
]
